# ChangeLog for media-gfx/synfigstudio
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added USE flag description wrt GLEP 56

  06 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  synfigstudio-0.61.08.ebuild:
  Move libtool to DEPEND

  06 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -synfigstudio-0.61.07.ebuild, +synfigstudio-0.61.08.ebuild:
  Version bump

  06 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  synfigstudio-0.61.07.ebuild:
  Update homepage

  19 Nov 2007; Cillian de Róiste (goibhniu) cillian.deroiste@gmail.com
  +metadata.xml, +synfigstudio-0.61.07.ebuild:
  Adding ebuild for synfigstudio bug 111279, thanks to Ali Sabil, Luc
  Stepniewski, jebas, Steve L, oninoshiko and Alexander Kazarin
