@@ -1,4 +1,4 @@
 DIST synfigstudio-0.61.08.tar.gz 1204766 RMD160 954fa1050dd20c0f72aed1914528bbdfb4ba53d6 SHA1 bbf5e9d5923804ef514a81444fce09ca4d1006f3 SHA256 affc1424ab179464605bd73e05cd35a22a46147dac067de5ca34d7d9c13ca137
-EBUILD synfigstudio-0.61.08.ebuild 666 RMD160 b95b84b037d61b365db76698cc559c2cc23f1611 SHA1 9bcb4af2b8aaf76db5820324d555ef92965fdc1b SHA256 803d3f46ab4c995e51421941a95fc23ce26df1bc1244da9a7b40e628cacfdb98
-MISC ChangeLog 853 RMD160 192d36dd164c7577f28174b28647becac4d30f61 SHA1 14d19e02b9e7dd96050c7ca093bc2350519f9021 SHA256 79176dc91a37b325db0ded55f0a2264f12a7ebc60628071b6dbebd56b7dab334
+EBUILD synfigstudio-0.61.08.ebuild 642 RMD160 c936b883134c34477dc7d9b59c707776a3bb2576 SHA1 fc11513fd4fc88fe086784da8842f70ad2708b0f SHA256 88727ba894ba00030fd5fb283366598c0aa6b990565f45f77119d5cdd741cc93
+MISC ChangeLog 991 RMD160 0887d0959d3073f410fee3f1d6468621151f317e SHA1 869f3085e12ec5bcedbba1a1e1172a6b529aeb61 SHA256 71b45a9764a89021404c35840d39295c2ab4ba18f1fb4329010b736f0d434c12
 MISC metadata.xml 270 RMD160 5418fcef43cdc4694836fc97032ece42794aca26 SHA1 d93d05b90e32c2a9ed9143aef1c90711fec1d908 SHA256 33a1846c5c26a5b38cb1f3adfa171084fe0ef365e63deaaa7f82c61b7fddcf9a
